[package]
name = "pubmed-to-hayagriva"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
askama = "0.12.0"
chrono = "0.4.38"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1.0"
